fix: margins on p elements were too large

--- a/src/style.css
+++ b/src/style.css
@@ -164,8 +164,7 @@ p,
 li {
   font-size: 11px;
   text-align: justify;
-  margin-top: var(--gap-small);
-  margin-bottom: var(--gap-small);
+  margin: 0;
 }
 
 blockquote {
